fixed meet the team gap for heading

--- a/src/app/our-team/our-team.component.scss
+++ b/src/app/our-team/our-team.component.scss
@@ -1,4 +1,7 @@
-
+.h2-gap {
+  margin-top: 25px;
+  gap: 25px;
+}
 .profile-list {
   padding: 0;
   margin: 0;
